Resolve warnings.